package InterfaceController.NURControllerFactory;

public interface NURController {
}
